tests/compile_fail/effects_missing_prop.iz
forge may_io() !io {
	give 1
}

forge caller_without_effect() -> i32 {
	may_io()
}
